Fix Junk folder icon alignment when it's nested in inbox folder (#1489292) - reverted commit 856ec447fa0a7ddd0ad19ed57fc0031040037284 which shouldn't   be cherry-picked from master

--- a/skins/larry/mail.css
+++ b/skins/larry/mail.css
@@ -191,15 +191,9 @@ a.iconbutton.threadmode.selected {
 #mailboxlist li.mailbox.junk > a {
 	background-position: 6px -334px;
 }
-#mailboxlist li.mailbox ul li.junk > a {
-	background-position: 22px -334px;
-}
 
 #mailboxlist li.mailbox.junk.selected > a {
 	background-position: 6px -358px;
-}
-#mailboxlist li.mailbox ul li.junk.selected > a {
-	background-position: 22px -358px;
 }
 
 #mailboxlist li.mailbox.trash > a {
